Cleaned notebooks. New Dockerfile for minimal python-VTK-Jupyter environment on Debian.

--- a/VTK/save to flie.ipynb
+++ b/VTK/save to flie.ipynb
@@ -9,15 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "import plot_vtk_matplotlib as pvm\n",
     "from vtk.util.numpy_support import vtk_to_numpy\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.interpolate import griddata\n",
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -339,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
